--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Visitor
-Visitor/script.py
-Visitor/query.txt
+z_visitor_py_script
+z_visitor_py_script/script.py
+z_visitor_py_script/query.txt
 .env
