--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "homepage": "https://github.com/Reinhardt-i/Taskifyr#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.8.0",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1"
   }
